--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -40,4 +40,14 @@ input [type = button], input[type = submit] {
 	padding: 10px;
 }
 
+h1 {
+	text-align: center;
+	font-family:Ariel, Helvatica;
+}
+
+div {
+	text-align:center;
+}
+
+
 
